--- a/composeApp/src/androidMain/res/values/themes.xml
+++ b/composeApp/src/androidMain/res/values/themes.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-	<style name="Theme.Navic" parent="android:Theme.DeviceDefault.DayNight">
-		<item name="android:windowSplashScreenAnimatedIcon">@drawable/splash</item>
+	<style name="Theme.Navic" parent="android:Theme.DeviceDefault">
 		<item name="android:windowActionBar">false</item>
 		<item name="android:windowNoTitle">true</item>
 	</style>
